<resources>
        
    <string name="app_name">Rp3</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_default_select_element">(Seleccione)</string>
    <string name="label_login">Ingresar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_help">Ayuda</string>
    <string name="label_created">Creado</string>
    <string name="label_modified">Modificado</string>
    <string name="test_message_confirmation">¿Está seguro?</string>
    <string name="confirmation_positive">Sí</string>
    <string name="confirmation_negative">No</string>
    <string name="action_search">Buscar</string>
    <string name="action_discard">Buscar</string>
    <string name="action_edit">Editar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_query">Consultar</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_new">Nuevo</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_overflow">Ordenar</string>
    <string name="action_chart">Graficar</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="message_no_search_result">No hay resultados&#8230;</string>
    <string name="message_no_selected_item">Seleccione un elemento</string>
    <string name="message_no_list_item">No hay elementos&#8230;</string>
    <string name="message_please_wait">Por favor espere</string>
    <string name="label_connecting">Conectando</string>
    <string name="label_sync">Sincronizar</string>
    <string name="label_update">Actualizar</string>    
    <string name="undo">Deshacer</string>
    <string name="undo_all">Deshacer Todo</string>
    <string name="item_deleted">Registro eliminado</string>
    <string name="n_items_deleted">%1$s registros eliminados</string>        
    <string name="message_connected">Concetado</string>
    <string name="message_unresolved">No Resuelto</string>
    <string name="message_title_send">Enviando</string>
    <string name="message_title_connecting">Conectando</string> 
    <string name="message_title_synchronizing">Sincronizando</string> 
    <string name="message_title_updating">Actualizando</string>
    <string name="message_title_loading">Cargando</string>
    <string name="message_title_query">Consultando</string>

    <string name="generic_show_message_service">"Asegurese de tener conexión a Internet, Sincronize ó reinicie sesión por favor."</string>
    <string name="message_error_sync_connection_http_error">Problemas con el Servidor, intenta más tarde</string>
    <string name="message_error_sync_connection_server_fail">No se pudo conectar con el servidor. Intenta más tarde</string>
    <string name="message_error_sync_general_error">Se detecto un problema al intentar actualizar/sincronizar los datos</string>
    <!--<string name="message_error_sync_general_error_auna">Asegurese de tener una correcta señal de conexión, se detecto un problema al intentar sincronizar</string>-->
    <string name="message_error_sync_general_error_auna">Se detecta baja disponibilidad de conexión para completar la operación. Por favor, asegurese de estar un un área con cobertura y reintente la sincronización nuevamente.</string>
    <string name="message_error_general">Ocurrió un problema, intenta más tarde</string>	
	
    <string name="message_error_sync_no_net_available">No hay conexión</string>
    
    <string name="empty"></string>
    
    <string name="validation_field_required">Campo Requerido</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_for">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
</resources>