<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView        
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"   
        android:layout_height="0dp"     
        android:layout_weight="1"        
        android:layout_gravity="center_horizontal"                  
        android:src="@drawable/ic_launcher" />
        
    <LinearLayout        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/editText_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton android:layout_width="wrap_content" 
            android:contentDescription="@string/label_help"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            style="?android:attr/borderlessButtonStyle"            
            android:src="@drawable/ic_action_help"/>                        
    </RelativeLayout>
</LinearLayout>